--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -18,3 +18,5 @@ ribbon.ConnetTimeout=3000
 hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds=5000
 #eureka.client.service-url.defaultZone=http://localhost:8000/eureka
+#自己配置的测试信息
+myname=VZHAO
