--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -19,4 +19,4 @@ hystrix.command.default.execution.timeout.enabled=true
 hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds=5000
 #eureka.client.service-url.defaultZone=http://localhost:8000/eureka
 #自己配置的测试信息
-myname=VZHAO
+myname=this is VZHAO
