--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -20,3 +20,6 @@ hystrix.command.default.execution.timeout.isolation.thread.timeoutInMilliseconds
 #eureka.client.service-url.defaultZone=http://localhost:8000/eureka
 #自己配置的测试信息
 myname=this is me
+#springbootadmin服务
+management.endpoints.web.exposure.include=refresh,health,info
+management.endpoint.health.show-details= ALWAYS
