--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -23,3 +23,6 @@ myname=this is me
 #springbootadmin服务
 management.endpoints.web.exposure.include=refresh,health,info
 management.endpoint.health.show-details= ALWAYS
+#zipkin
+spring.zipkin.base-url= http://localhost:9000
+spring.sleuth.sampler.probability= 1.0
