--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -26,3 +26,7 @@ management.endpoint.health.show-details= ALWAYS
 #zipkin
 spring.zipkin.base-url= http://localhost:8200
 spring.sleuth.sampler.probability= 1.0
+#elaticsearch
+es.index=2007-shop
+#多个结点中间用逗号分隔,端口号
+pringcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
