--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -29,4 +29,4 @@ spring.sleuth.sampler.probability= 1.0
 #elaticsearch
 es.index=2007-shop
 #多个结点中间用逗号分隔,端口号
-pringcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
+springcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
