--- a/qf-shop-dev.properties
+++ b/qf-shop-dev.properties
@@ -30,3 +30,11 @@ spring.sleuth.sampler.probability= 1.0
 es.index=2007-shop
 #多个结点中间用逗号分隔,端口号
 springcloud-es.elasticsearch.hostlist=${eshostlist:127.0.0.1:9200}
+#发送邮件的配置
+spring.mail.host=smtp.qq.com
+spring.mail.username=982908910@qq.com
+spring.mail.password=mdbpnmpygtvbbdhe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.auth.starttls.enable=true
+spring.mail.properties.mail.smtp.auth.starttls.required=true
+spring.mail.default-encoding=UTF-8
